--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,5 +1,5 @@
 # Degree
-- degree: Bachelor of Technology, in Computer Science
+- degree: Bachelor of Technology, Computer Science
   uni: Galgotias College of Engineering and Technology
   year: 2015 &mdash; 2019
   summary: Programming Languages, Data Structures and Algorithms, Distributed Systems, Operating Systems, Computer Networks and Network Security
