--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -1,15 +1,15 @@
 # Associations
 # comment out the urls if you do not wish to display them
 
-- organization: PETA
-  role: Volunteer
-  year: 2001 &mdash; 2010
-  url: https://www.peta.org/
-  summary: Organized fund drives and participated in fundraising events for the benefit of PETA's local Springfield operations.
+- organization: Galgotias College of Engineering and Technology (Rotary Blood Bank Group)
+  role: Blood Bank Volunteer
+  year: 2016 &mdash; 2019
+  url: https://rotarybloodbankfaridabad.org/index.html
+  summary: Contributes to the lifesaving mission of a blood donation bank started from 2016. Actively participating in various aspects of blood donation campaigns and operations, including donor recruitment, screening, and post-donation care. Committed to promoting blood donation awareness and encouraging community members to join the cause. My experience in the blood bank deepened my understanding of the critical role blood plays in healthcare and reinforced my commitment to making a positive impact on society.
 
 
-- organization: Yale Amnesty International
-  role: Communications coordinator
-  year: 2002 &mdash; 2004
-  url: http://campuspress.yale.edu/amnesty/
-  summary: During my junion and senior years at Yale, I was actively involved in Yale Amnesty International where I helped facilitate our student organization communications through website maintenance, writing for our campus publication, and graphic design of related materials.
+- organization: Clearwater Analytics
+  role: CSR Committee Member
+  year: 2022 &mdash; present
+  url: https://clearwateranalytics.com/hr-story/csr-activity-at-salma-public-school/
+  summary: Actively involved in CSR initiatives, focusing on community outreach and youth development. Led school visits to educate students about the importance of social responsibility and inspired them to participate in charitable causes. Collaborated with my organizations to implement sustainable and impactful community projects. Committed to fostering a positive corporate social image and making a tangible difference in the lives of others.
