--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,19 +1,34 @@
 # Jobs
-# VP of Global Communications
+# SDE-II @Clearwater Analytics
 - company: Springfield International Human Rights Outreach
   position: VP of Global Communications
   duration: Oct, 2013 &mdash; Present
-  summary: Write about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points	<ul class="resume-item-list"><li>A project you are proud of</li><li>Another awesome project</li><li>or a team or department you worked with</li></ul>
+  summary: As a Software Development Engineer (L2), I have successfully transitioned into a mentor role, overseeing the interns and development of new features using Java 8 and SpringBoot 3. Building upon my previous experience in API development and cloud technologies, I am now able to effectively design high-level architectures.
+    <ul class="resume-item-list">
+    <li>Demonstrated proficiency in designing high-level architectures that align with business requirements and technical constraints, ensuring the long-term success of projects.</li>
+    <li>Effectively collaborated with stakeholders to gather and analyze requirements, ensuring that developed applications meet the needs of end-users and business objectives.</li>
+    <li>Leveraged my deep understanding of Java 8 and SpringBoot 3 to architect and implement scalable, efficient, and maintainable software solutions.</li>
+    </ul>
 
-# Director of Digital Stratgy
-- company: United Nations Human Rights Council
-  position: Director of Digital Strategy
-  duration:  Jun, 2010 &mdash; Sept, 2013
-  summary: If your stint was shorter, feel free to be brief and just call out the most meaningful points of your role. Be concise, and be meaninful. The person reading just needs enough to want to talk to you more about your experience.
+# SDE-I @Clearwater Analytics
+- company: Clearwater Analytics
+  position: Software Development Engineer(L1)
+  duration:  July, 2022 &mdash; July, 2024
+  summary: <ul class="resume-item-list">
+    <li>Proficiently designed, developed, and deployed over 50 RESTful APIs using SpringBoot, ensuring efficient communication and data exchange between systems.</li>
+    <li>Demonstrated expertise in leveraging AWS services, such as EKS, EC2 for compute resources, S3 for object storage, and DynamoDB for NoSQL databases, to create scalable and reliable cloud-native applications.</li>
+    <li>Implemented comprehensive automated testing frameworks (Spring Tests, Mockito) to identify and address defects early in the development process, resulting in a significant 40% improvement in code quality and overall system reliability.</li>
+    <li>Proactively implemented strategies to prevent API incidents, such as error handling mechanisms, monitoring tools, and incident response plans. Successfully reduced the occurrence of incidents upto 12%, ensuring uninterrupted service delivery to users.</li>
+    <li>Implemented strategies to optimize API response times, including caching frequently accessed data using an in-house caching mechanism and optimizing database queries. These efforts resulted in around 25% improvement in API response times, significantly enhancing user experience.</li>
+    <li>Effectively utilized Kubernetes to manage and automate the deployment, scaling, and operation of containerized applications, improving efficiency and reducing manual effort.</li>
+    </ul>
 
-
-# Communications Coordinator
-- company: Springfield Women & Children's Center
-  position: Communications Coordinator
-  duration:   Jun, 2008  &mdash; May, 2010
-  summary: Led communication efforts across digital and traditional media channels for marketing and public relations, internal communication strategies, and coordinated support programs for the recipients of the center's services.
+# Associate Software Engineer @Mphasis Ltd.
+- company: Mphasis Ltd.
+  position: Associate Software Engineer
+  duration:   April, 2021  &mdash; June, 2022
+  summary: <ul class="resume-item-list">
+    <li> Successfully identified and resolved complex software issues by conducting thorough investigations and analyzing error logs, contributing to improved system stability and performance.</li>
+    <li>Developed and executed comprehensive test cases, including unit, integration, and system tests, to ensure the quality and reliability of software applications.</li>
+    <li>Wrote well-structured and maintainable unit tests using frameworks like JUnit and Mockito, achieving a high level of test coverage and facilitating early detection of defects. private capital data analysis.</li>
+    </ul>
