Added image and updated experience

--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,8 +1,8 @@
 # Jobs
 # SDE-II @Clearwater Analytics
-- company: Springfield International Human Rights Outreach
-  position: VP of Global Communications
-  duration: Oct, 2013 &mdash; Present
+- company: Clearwater Analytics
+  position: Software Development Engineer(L2)
+  duration: Aug, 2024 &mdash; Present
   summary: As a Software Development Engineer (L2), I have successfully transitioned into a mentor role, overseeing the interns and development of new features using Java 8 and SpringBoot 3. Building upon my previous experience in API development and cloud technologies, I am now able to effectively design high-level architectures.
     <ul class="resume-item-list">
     <li>Demonstrated proficiency in designing high-level architectures that align with business requirements and technical constraints, ensuring the long-term success of projects.</li>
